login page created

--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-//supply chain & stock management
+<!DOCTYPE html>
+<html>
+<head>
+	<title>IMS Login - Inventory Management System</title>
+	<link rel="stylesheet" type="text/css" href="css/login.css">
+</head>
+<body id="loginBody">
+	<div class="container">
+		<div class="loginHeader">
+			<IMG SRC="images/logogif.gif">
+		</div>
+		<div class="loginBody">
+			<form>
+				<div class="loginInputsContainer">
+					<label for="">Username</label>
+					<input placeholder="username" name="username" type="text" />
+				</div>
+				<div class="loginInputsContainer">
+					<label for="">Password</label>
+					<input placeholder="password" name="password" type="password" />
+				</div>
+				<div class="loginButtonContainer">
+					<button>login</button>
+				</div>
+			</form>
+		</div>
+	</div>
+</body>
+</html>
