--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>IMS Login - Inventory Management System</title>
+	<title>Unilever Bangladesh Ltd.</title>
 	<link rel="stylesheet" type="text/css" href="css/login.css">
 </head>
 <body id="loginBody">
